--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="blue">#3399ff</color>
+    <color name="red">#990000</color>
+    <color name="green">#33cc33</color>
+    <color name="yellow">#ffcc00</color>
 </resources>
