--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,113 +8,32 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/clickOnImageTextView"
+        android:id="@+id/initTypeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/click_on_the_image"
-        android:textSize="24sp"
+        android:text="@string/choose_init_type"
+        android:textSize="14sp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/paintableBoxLayout"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clickOnImageTextView" />
-
-    <TextView
-        android:id="@+id/paintTypeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/choose_paint_type"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/paintableBoxLayout" />
-
     <Button
-        android:id="@+id/drawPathButton"
+        android:id="@+id/codeButton"
         android:layout_width="100dp"
         android:layout_height="48dp"
-        android:text="@string/path"
-        app:layout_constraintEnd_toStartOf="@id/drawGroupButton"
+        android:text="@string/code"
+        app:layout_constraintEnd_toStartOf="@id/xmlButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paintTypeTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/initTypeTextView" />
 
     <Button
-        android:id="@+id/drawGroupButton"
+        android:id="@+id/xmlButton"
         android:layout_width="100dp"
         android:layout_height="48dp"
-        android:text="@string/group"
-        app:layout_constraintStart_toEndOf="@id/drawPathButton"
+        android:text="@string/xml"
+        app:layout_constraintStart_toEndOf="@id/codeButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paintTypeTextView" />
-
-    <TextView
-        android:id="@+id/paintColorTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="Choose paint color"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/drawPathButton" />
-
-    <Button
-        android:id="@+id/paintBlueButton"
-        android:layout_width="100dp"
-        android:layout_height="32dp"
-        android:background="@color/blue"
-        android:text="@string/blue"
-        app:layout_constraintEnd_toStartOf="@id/drawGroupButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paintColorTextView" />
-
-    <Button
-        android:id="@+id/paintRedButton"
-        android:layout_width="100dp"
-        android:layout_height="32dp"
-        android:background="@color/red"
-        android:text="@string/red"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/drawPathButton"
-        app:layout_constraintTop_toBottomOf="@+id/paintColorTextView" />
-
-    <Button
-        android:id="@+id/paintGreenButton"
-        android:layout_width="100dp"
-        android:layout_height="32dp"
-        android:background="@color/green"
-        android:text="@string/green"
-        app:layout_constraintEnd_toStartOf="@id/drawGroupButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paintBlueButton" />
-
-    <Button
-        android:id="@+id/paintYellowButton"
-        android:layout_width="100dp"
-        android:layout_height="32dp"
-        android:background="@color/yellow"
-        android:text="@string/yellow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/drawPathButton"
-        app:layout_constraintTop_toBottomOf="@+id/paintBlueButton" />
-
-    <Button
-        android:id="@+id/resetColorsButton"
-        android:layout_width="160dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/reset_colors"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paintYellowButton" />
+        app:layout_constraintTop_toBottomOf="@+id/initTypeTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
